# Meteo_model

./: .gitignore  .gitlab-ci.yml  Design_Proposal.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
api/: api.py  predict.py  utils.py
app/: app.py
docs/: Analiza_Literatury.md
meteo_model/: app.py  evaluate.py  set_mlflow_paths.py  station.py
meteo_model/data/: config.py  data_cleaner.py  data_cleaning.py  data_loader.py  datasets.py  get_stats.py  normaliser.py  prepare_weather_data.py  preprocess_data.py  weather_data.py
meteo_model/data/api/: api_data_provider.py  fetch_data.py
meteo_model/data_preparation/: collect_data.py
meteo_model/model/: base_model.py  weather_model_lstm.py  weather_model_tcn.py
meteo_model/training/: config.py  engine.py  finetune_lstm.py  perform_LSTM_experiments.py  perform_TCN_experiments.py  perform_experiments.py  run.sh  train.py
meteo_model/utils/: api_utils.py  app_utils.py  evaluation_utils.py  file_utils.py  mlflow_utils.py  model_utils.py  training_utils.py
mlruns/0/: meta.yaml
mlruns/115121325303145209/: meta.yaml
mlruns/119473678428842088/: meta.yaml
mlruns/153050902482671365/: meta.yaml
mlruns/200125285106161055/: meta.yaml
mlruns/227135730088265341/: meta.yaml
mlruns/309923045412704310/: meta.yaml
mlruns/390647709600350888/: meta.yaml
mlruns/405421932597671596/: meta.yaml
mlruns/472574071828813039/: meta.yaml
mlruns/514992033311720890/: meta.yaml
mlruns/801592398909839266/: meta.yaml
mlruns/824195970598413618/: meta.yaml
mlruns/849538690690547619/: meta.yaml
models/: MeteoModel-1_day.pth  MeteoModel-2_days.pth  MeteoModel-5_days.pth  MeteoModel-6_days.pth  MeteoModel-7_days.pth  MeteoModel-8_days.pth
notebooks/: 01_exploratory_data_analysis.ipynb  02_exploratory_data_analysis.ipynb
reports/training_results/: Analiza_rezultatow_LSTM.md  Analiza_rezultatów_TCN.md  Analiza_rezóltatow_LSTM.md
tests/data/: test_data_cleaner.py  test_normaliser.py  test_weather_data.py
tests/utils/: test_file_utils.py
(+200 files in other folders)
