[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zprp_meteo_model"
version = "0.0.1"
description = "Developing meterological model using LSTM and TCN neural networks, with simple app."
authors = [
  {name="Mateusz Ostaszewski"},
  {name="Michał Sadowski"},
  {name="Szymon Łukawski"},
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "meteostat>=1.6.8",
    "mlflow>=2.18.0",
    "notebook>=7.2.2",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "pytorch-tcn>=1.2.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit>=1.40.1",
    "torch>=2.5.1",
    "uvicorn>=0.32.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["zprp_meteo_model"]
force_sort_within_sections = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "optuna-dashboard>=0.17.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
]
